tests/paczka1/fuzzy1/53973070.err
Error in line 1: SP6LlkK2 S715 23,1
Error in line 14: 35j S513 141,4
Error in line 16: 35j S715 42,6
Error in line 28: S715 S998 59,1
Error in line 30: S715 S993 238,8
Error in line 31: wCokHXk2 A301 42,9
Error in line 37: wCokHXk2 S993 68,3
